--- a/Source/DubsHeatPumps/DubsHeatPumps.csproj
+++ b/Source/DubsHeatPumps/DubsHeatPumps.csproj
@@ -31,15 +31,15 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
-      <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
+      <HintPath>..\..\lib\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\..\..\..\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <HintPath>..\..\lib\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
     <Reference Include="DubsBadHygiene">
-      <HintPath>..\..\..\..\..\..\workshop\content\294100\836308268\Current\Assemblies\DubsBadHygiene.dll</HintPath>
+      <HintPath>..\..\lib\DubsBadHygiene.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
